...
        enterButton.setTitleColor(.ypBlack, for: .normal)
        enterButton.setTitleColor(.ypBlack, for: .highlighted)
        enterButton.backgroundColor = .white
        enterButton.addTarget(self, action: #selector(didEnterButtonTapped), for: .touchUpInside)
        enterButton.translatesAutoresizingMaskIntoConstraints = false
        enterButton.layer.cornerRadius = 16
        enterButton.accessibilityIdentifier = "Authenticate"
        view.addSubview(enterButton)

        enterButton.heightAnchor.constraint(equalToConstant: 48).isActive = true
        enterButton.leadingAnchor.constraint(equalTo: view.leadingAnchor, constant: 16).isActive = true
        enterButton.trailingAnchor.constraint(equalTo: view.trailingAnchor, constant: -16).isActive = true
        enterButton.topAnchor.constraint(equalTo: view.topAnchor, constant: 640).isActive = true
...
