...
        webView.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(webView)
        webView.leadingAnchor.constraint(equalTo: view.leadingAnchor).isActive = true
        webView.trailingAnchor.constraint(equalTo: view.trailingAnchor).isActive = true
        webView.topAnchor.constraint(equalTo: view.topAnchor).isActive = true
        webView.bottomAnchor.constraint(equalTo: view.bottomAnchor).isActive = true
        webView.accessibilityIdentifier = "UnsplashWebView"
        self.webView = webView
    }
    
    private func setBackButton() {
        guard let webView else { preconditionFailure("unwrap error webView") }
        guard let chevronImage = UIImage(named: "chevronBackward") else { preconditionFailure("chevron Image doesn't exist")}
...
