...
    
    private func setLikeButton() {
        guard let likeImage = UIImage(named: "like_button_off") else {return}
        let likeButton = UIButton(type: .custom)
        likeButton.setImage(likeImage, for: .normal)
        likeButton.addTarget(self, action: #selector(didTapLikeButton), for: .touchUpInside)
        likeButton.accessibilityIdentifier = "like button"
        self.likeButton = likeButton
        self.contentView.addSubview(self.likeButton)
        self.likeButton.translatesAutoresizingMaskIntoConstraints = false
        self.likeButton.topAnchor.constraint(equalTo: self.contentView.topAnchor, constant: 4).isActive = true
        self.likeButton.trailingAnchor.constraint(equalTo:  self.contentView.trailingAnchor, constant: -16).isActive = true
        self.likeButton.widthAnchor.constraint(equalToConstant: 42).isActive = true
...
